@@ -3405,16 +3405,15 @@ PIKE_MODULE_INIT
 #ifdef HAVE_SYSLOG
 
 /* function(string,int,int:void) */
-  ADD_EFUN("openlog", f_openlog,tFunc(tStr tInt tInt,tVoid), OPT_SIDE_EFFECT);
-  ADD_FUNCTION("openlog", f_openlog,tFunc(tStr tInt tInt,tVoid), 0);
+  ADD_FUNCTION2("openlog", f_openlog,tFunc(tStr tInt tInt,tVoid), 0,
+                OPT_SIDE_EFFECT);
 
 /* function(int,string:void) */
-  ADD_EFUN("syslog", f_syslog,tFunc(tInt tStr,tVoid), OPT_SIDE_EFFECT);
-  ADD_FUNCTION("syslog", f_syslog,tFunc(tInt tStr,tVoid), 0);
+  ADD_FUNCTION2("syslog", f_syslog,tFunc(tInt tStr,tVoid), 0,
+                OPT_SIDE_EFFECT);
 
 /* function(:void) */
-  ADD_EFUN("closelog", f_closelog,tFunc(tNone,tVoid), OPT_SIDE_EFFECT);
-  ADD_FUNCTION("closelog", f_closelog,tFunc(tNone,tVoid), 0);
+  ADD_FUNCTION2("closelog", f_closelog,tFunc(tNone,tVoid), 0, OPT_SIDE_EFFECT);
 #endif /* HAVE_SYSLOG */
 
 #ifdef HAVE_SLEEP
