@@ -173,6 +173,9 @@ o Floats are no longer by default sorted before added. This may reduce
 o Returning UNDEFINED from `+ and ``+ is not allowed and will cause an
   exception.
 
+o RegGetValue(), RegGetKeyNames(), RegGetKeyValues(), openlog(),
+  syslog() and closelog() have been moved to System.
+
 
 New modules
 -----------
